Corrected the overlap

--- a/src/components/GoalsComponents/UpdateGoal/UpdateGoalForm.scss
+++ b/src/components/GoalsComponents/UpdateGoal/UpdateGoalForm.scss
@@ -148,7 +148,7 @@
     margin-top: 0.5em;
     position: absolute;
     right: 0;
-    margin-right: 44%;
+    margin-right: 50%;
     border: none;
     padding: 0.8em;
     border-radius: 10px;
